RESOLVED FIXED12923
REGRESSION: Assertion failure copying standalone image
https://bugs.webkit.org/show_bug.cgi?id=12923
Summary REGRESSION: Assertion failure copying standalone image
Gibbons Burke
Reported 2007-02-27 19:57:03 PST
Open the URL. Right-click on the image and select Copy Image. This causes the nightly build WebKit application to crash immediately. I could not reproduce the crash in the current regular version of Safari. Here is the crash report: Date/Time: 2007-02-27 21:42:07.163 -0600 OS Version: 10.4.8 (Build 8L127) Report Version: 4 Command: Safari Path: /Applications/Safari.app/Contents/MacOS/Safari Parent: WindowServer [60] Version: ??? (19879) PID: 2326 Thread: 0 Exception: EXC_BAD_ACCESS (0x0001) Codes: KERN_PROTECTION_FAILURE (0x0002) at 0x000000b4 Thread 0 Crashed: 0 com.apple.WebCore 0x0140a1ec WebCore::ResourceResponse::updateResourceResponse() const + 28 1 com.apple.WebCore 0x0140a3d8 WebCore::ResourceResponse::mimeType() const + 24 2 com.apple.WebCore 0x013e21cc WebCore::Pasteboard::writeImage(WebCore::HitTestResult const&) + 844 3 com.apple.WebCore 0x01405244 WebCore::ContextMenuController::contextMenuItemSelected(WebCore::ContextMenuItem*) + 772 4 com.apple.WebCore 0x0140474c -[WebCoreMenuTarget forwardContextMenuAction:] + 172 5 com.apple.AppKit 0x925aac4c -[NSApplication sendAction:to:from:] + 108 6 com.apple.Safari 0x0002956c 0x1000 + 165228 7 com.apple.AppKit 0x926054b8 -[NSMenu performActionForItemAtIndex:] + 392 8 com.apple.AppKit 0x9260523c -[NSCarbonMenuImpl performActionWithHighlightingForItemAtIndex:] + 104 9 com.apple.AppKit 0x9262dd6c _NSPopUpCarbonMenu2 + 2480 10 com.apple.AppKit 0x9262d3ac _NSPopUpCarbonMenu1 + 44 11 com.apple.AppKit 0x92684be8 -[NSCarbonMenuImpl _popUpContextMenu:withEvent:forView:withFont:] + 168 12 com.apple.AppKit 0x92684a68 -[NSMenu _popUpContextMenu:withEvent:forView:withFont:] + 216 13 com.apple.AppKit 0x92821404 -[NSControl _rightMouseUpOrDown:] + 440 14 com.apple.AppKit 0x92565fa0 -[NSWindow sendEvent:] + 6424 15 com.apple.Safari 0x00021734 0x1000 + 132916 16 com.apple.AppKit 0x9250e8d4 -[NSApplication sendEvent:] + 4172 17 com.apple.Safari 0x00021238 0x1000 + 131640 18 com.apple.AppKit 0x92505d10 -[NSApplication run] + 508 19 com.apple.AppKit 0x925f687c NSApplicationMain + 452 20 com.apple.Safari 0x0005c77c 0x1000 + 374652 21 com.apple.Safari 0x0005c624 0x1000 + 374308 Thread 1: 0 libSystem.B.dylib 0x9000ab48 mach_msg_trap + 8 1 libSystem.B.dylib 0x9000aa9c mach_msg + 60 2 com.apple.CoreFoundation 0x902b0b78 __CFRunLoopRun + 832 3 com.apple.CoreFoundation 0x902b047c CFRunLoopRunSpecific + 268 4 com.apple.Foundation 0x90b2969c +[NSURLConnection(NSURLConnectionInternal) _resourceLoadLoop:] + 264 5 com.apple.Foundation 0x90b02194 forkThreadForFunction + 108 6 libSystem.B.dylib 0x9002b508 _pthread_body + 96 Thread 2: 0 libSystem.B.dylib 0x9000ab48 mach_msg_trap + 8 1 libSystem.B.dylib 0x9000aa9c mach_msg + 60 2 com.apple.CoreFoundation 0x902b0b78 __CFRunLoopRun + 832 3 com.apple.CoreFoundation 0x902b047c CFRunLoopRunSpecific + 268 4 com.apple.Foundation 0x90b2a7dc +[NSURLCache _diskCacheSyncLoop:] + 152 5 com.apple.Foundation 0x90b02194 forkThreadForFunction + 108 6 libSystem.B.dylib 0x9002b508 _pthread_body + 96 Thread 3: 0 libSystem.B.dylib 0x9001f08c select + 12 1 com.apple.CoreFoundation 0x902c340c __CFSocketManager + 472 2 libSystem.B.dylib 0x9002b508 _pthread_body + 96 Thread 0 crashed with PPC Thread State 64: srr0: 0x000000000140a1ec srr1: 0x000000000000f030 vrsave: 0x0000000000000000 cr: 0x44040222 xer: 0x0000000020000004 lr: 0x000000000140a3d8 ctr: 0x00000000001769a0 r0: 0x000000000140a3d8 r1: 0x00000000bfffd860 r2: 0x0000000000200000 r3: 0x0000000000000024 r4: 0x00000000078b9de8 r5: 0x0000000000000001 r6: 0x000000000000003f r7: 0x0000000002c2ad10 r8: 0x00000000f842bb20 r9: 0x00000000007ec008 r10: 0x00000000001755fc r11: 0x00000000007ec014 r12: 0x00000000001769a0 r13: 0x0000000000000001 r14: 0x00000000a253d3c8 r15: 0x00000000a253d3c8 r16: 0x00000000a24fd3c8 r17: 0x0000000002175d80 r18: 0x0000000000000000 r19: 0x0000000002175d80 r20: 0x0000000007523df0 r21: 0x00000000bfffd978 r22: 0x00000000078b9da0 r23: 0x0000000000000024 r24: 0x0000000001487bfc r25: 0x00000000bfffdba4 r26: 0x00000000bfffdba4 r27: 0x00000000bfffda80 r28: 0x0000000000000000 r29: 0x0000000000000024 r30: 0x0000000000000024 r31: 0x00000000013e1e94 Binary Images Description: 0x1000 - 0xdcfff com.apple.Safari 2.0.4 (419.3) /Applications/Safari.app/Contents/MacOS/Safari 0x109000 - 0x10afff WebKitNightlyEnabler.dylib /Applications/WebKit.app/Contents/Resources/WebKitNightlyEnabler.dylib 0x10e000 - 0x19dfff com.apple.JavaScriptCore 522+ /Applications/WebKit.app/Contents/Resources/JavaScriptCore.framework/Versions/A/JavaScriptCore 0x1f9000 - 0x1fbfff com.apple.AutomatorCMM 1.0 (48) /System/Library/Contextual Menu Items/AutomatorCMM.plugin/Contents/MacOS/AutomatorCMM 0x305000 - 0x3b4fff com.apple.WebKit 522+ /Applications/WebKit.app/Contents/Resources/WebKit.framework/Versions/A/WebKit 0x1008000 - 0x1527fff com.apple.WebCore 522+ /Applications/WebKit.app/Contents/Resources/WebCore.framework/Versions/A/WebCore 0x606b000 - 0x606bfff com.apple.SpotLightCM 1.0 (121.36) /System/Library/Contextual Menu Items/SpotlightCM.plugin/Contents/MacOS/SpotlightCM 0x85c7000 - 0x85cafff com.lemkesoft.GraphicConverterCMI 1.1 /Users/gibbonsb/Library/Contextual Menu Items/GraphicConverterCMI.plugin/Contents/MacOS/GraphicConverterCMI 0x85d2000 - 0x85d4fff com.chronosnet.StickyBrainMenu ??? (2.1) /Users/gibbonsb/Library/Contextual Menu Items/StickyBrainMenu.plugin/Contents/MacOS/StickyBrainMenu 0x8663000 - 0x8667fff com.apple.FolderActionsMenu 1.3 /System/Library/Contextual Menu Items/FolderActionsMenu.plugin/Contents/MacOS/FolderActionsMenu 0x8fe00000 - 0x8fe51fff dyld 45.3 /usr/lib/dyld 0x90000000 - 0x901bcfff libSystem.B.dylib /usr/lib/libSystem.B.dylib 0x90215000 - 0x90262fff com.apple.CoreText 1.0.2 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreText.framework/Versions/A/CoreText 0x9028e000 - 0x90367fff com.apple.CoreFoundation 6.4.6 (368.27) /System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation 0x903b1000 - 0x90688fff com.apple.CoreServices.CarbonCore 681.8 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/CarbonCore.framework/Versions/A/CarbonCore 0x906ef000 - 0x90761fff com.apple.framework.IOKit 1.4 (???) /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit 0x9077c000 - 0x907fcfff com.apple.CoreServices.OSServices 4.1 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/OSServices.framework/Versions/A/OSServices 0x908dc000 - 0x908dcfff com.apple.CoreServices 10.4 (???) /System/Library/Frameworks/CoreServices.framework/Versions/A/CoreServices 0x90918000 - 0x9099cfff libobjc.A.dylib /usr/lib/libobjc.A.dylib 0x909f7000 - 0x90a7ffff com.apple.DesktopServices 1.3.5 /System/Library/PrivateFrameworks/DesktopServicesPriv.framework/Versions/A/DesktopServicesPriv 0x90adc000 - 0x90d07fff com.apple.Foundation 6.4.6 (567.27) /System/Library/Frameworks/Foundation.framework/Versions/C/Foundation 0x90eb7000 - 0x90ed5fff libGL.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGL.dylib 0x90ee1000 - 0x90f3bfff libGLU.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLU.dylib 0x90f5d000 - 0x90f85fff com.apple.SystemConfiguration 1.8.3 /System/Library/Frameworks/SystemConfiguration.framework/Versions/A/SystemConfiguration 0x90f9c000 - 0x90fa8fff com.apple.opengl 1.4.7 /System/Library/Frameworks/OpenGL.framework/Versions/A/OpenGL 0x90fae000 - 0x90fcefff com.apple.DirectoryService.Framework 3.1 /System/Library/Frameworks/DirectoryService.framework/Versions/A/DirectoryService 0x90fe4000 - 0x90ffcfff com.apple.WebServices 1.1.2 (1.1.0) /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/WebServicesCore.framework/Versions/A/WebServicesCore 0x91146000 - 0x91167fff com.apple.LangAnalysis 1.6.1 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/LangAnalysis.framework/Versions/A/LangAnalysis 0x91247000 - 0x912fefff com.apple.QD 3.10.21 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/QD.framework/Versions/A/QD 0x9133c000 - 0x913cdfff com.apple.print.framework.PrintCore 4.6 (177.13) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/PrintCore.framework/Versions/A/PrintCore 0x91432000 - 0x9143afff libbsm.dylib /usr/lib/libbsm.dylib 0x914f6000 - 0x914f6fff com.apple.ApplicationServices 10.4 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/ApplicationServices 0x91525000 - 0x91574fff com.apple.NavigationServices 3.4.4 (3.4.3) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/NavigationServices.framework/Versions/A/NavigationServices 0x915bb000 - 0x915c8fff libCSync.A.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreGraphics.framework/Versions/A/Resources/libCSync.A.dylib 0x91612000 - 0x9162bfff libRIP.A.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreGraphics.framework/Versions/A/Resources/libRIP.A.dylib 0x918fb000 - 0x91920fff com.apple.FindByContent 1.5 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/FindByContent.framework/Versions/A/FindByContent 0x91991000 - 0x919a5fff com.apple.speech.synthesis.framework 3.3 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/SpeechSynthesis.framework/Versions/A/SpeechSynthesis 0x91ab7000 - 0x91c72fff com.apple.security 4.6 (29770) /System/Library/Frameworks/Security.framework/Versions/A/Security 0x91df1000 - 0x91e33fff com.apple.LaunchServices 181 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/LaunchServices.framework/Versions/A/LaunchServices 0x92016000 - 0x92323fff com.apple.HIToolbox 1.4.8 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HIToolbox.framework/Versions/A/HIToolbox 0x92473000 - 0x924d1fff com.apple.HIServices 1.5.3 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/HIServices.framework/Versions/A/HIServices 0x92501000 - 0x92b34fff com.apple.AppKit 6.4.7 (824.41) /System/Library/Frameworks/AppKit.framework/Versions/C/AppKit 0x92f1f000 - 0x92f1ffff com.apple.Carbon 10.4 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Carbon 0x92f21000 - 0x92f35fff com.apple.ImageCapture 3.0 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/ImageCapture.framework/Versions/A/ImageCapture 0x92f4d000 - 0x92f5dfff com.apple.speech.recognition.framework 3.4 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/SpeechRecognition.framework/Versions/A/SpeechRecognition 0x92f69000 - 0x92f7efff com.apple.securityhi 2.0 (203) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/SecurityHI.framework/Versions/A/SecurityHI 0x92f90000 - 0x93017fff com.apple.ink.framework 101.2 (69) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Ink.framework/Versions/A/Ink 0x9302b000 - 0x93036fff com.apple.help 1.0.3 (32) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Help.framework/Versions/A/Help 0x930a2000 - 0x93108fff com.apple.htmlrendering 1.1.2 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/HTMLRendering.framework/Versions/A/HTMLRendering 0x931b6000 - 0x931d3fff com.apple.audio.SoundManager 3.9 /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/CarbonSound.framework/Versions/A/CarbonSound 0x931e5000 - 0x931f2fff com.apple.CommonPanels 1.2.2 (73) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/CommonPanels.framework/Versions/A/CommonPanels 0x933b7000 - 0x933ccfff libcups.2.dylib /usr/lib/libcups.2.dylib 0x933d4000 - 0x93504fff com.apple.AddressBook.framework 4.0.4 (485.1) /System/Library/Frameworks/AddressBook.framework/Versions/A/AddressBook 0x93721000 - 0x93721fff com.apple.Cocoa 6.4 (???) /System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa 0x93797000 - 0x937c4fff com.apple.LDAPFramework 1.4.1 (69.0.1) /System/Library/Frameworks/LDAP.framework/Versions/A/LDAP 0x93a27000 - 0x93a44fff libresolv.9.dylib /usr/lib/libresolv.9.dylib 0x93a4d000 - 0x93acefff com.apple.SearchKit 1.0.5 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/SearchKit.framework/Versions/A/SearchKit 0x93b31000 - 0x93b4dfff com.apple.securityfoundation 2.2 (27710) /System/Library/Frameworks/SecurityFoundation.framework/Versions/A/SecurityFoundation 0x93d04000 - 0x93d48fff com.apple.securityinterface 2.2 (27692) /System/Library/Frameworks/SecurityInterface.framework/Versions/A/SecurityInterface 0x942a1000 - 0x942a1fff com.apple.audio.units.AudioUnit 1.4 /System/Library/Frameworks/AudioUnit.framework/Versions/A/AudioUnit 0x943d6000 - 0x9495efff libBLAS.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libBLAS.dylib 0x949af000 - 0x94cdafff libLAPACK.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libLAPACK.dylib 0x94d8f000 - 0x94e24fff libvDSP.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libvDSP.dylib 0x94e4a000 - 0x94eb8fff libvMisc.dylib /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/libvMisc.dylib 0x94ec9000 - 0x94ed8fff com.apple.DSObjCWrappers.Framework 1.1 /System/Library/PrivateFrameworks/DSObjCWrappers.framework/Versions/A/DSObjCWrappers 0x94f14000 - 0x94f24fff libsasl2.2.dylib /usr/lib/libsasl2.2.dylib 0x95656000 - 0x9571dfff libcrypto.0.9.7.dylib /usr/lib/libcrypto.0.9.7.dylib 0x9576c000 - 0x9579bfff libssl.0.9.7.dylib /usr/lib/libssl.0.9.7.dylib 0x95af5000 - 0x95b65fff com.apple.CoreData 80 /System/Library/Frameworks/CoreData.framework/Versions/A/CoreData 0x95c68000 - 0x95c91fff com.apple.Metadata 10.4.4 (121.36) /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/Metadata.framework/Versions/A/Metadata 0x96116000 - 0x9611bfff libmathCommon.A.dylib /usr/lib/system/libmathCommon.A.dylib 0x9611e000 - 0x961ebfff com.apple.ColorSync 4.4.4 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ColorSync.framework/Versions/A/ColorSync 0x962c3000 - 0x962fbfff com.apple.AE 1.5 (297) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/AE.framework/Versions/A/AE 0x96318000 - 0x96359fff com.apple.CFNetwork 129.19 /System/Library/Frameworks/CoreServices.framework/Versions/A/Frameworks/CFNetwork.framework/Versions/A/CFNetwork 0x9636e000 - 0x9636efff com.apple.Accelerate 1.2.2 (Accelerate 1.2.2) /System/Library/Frameworks/Accelerate.framework/Versions/A/Accelerate 0x96472000 - 0x96557fff com.apple.vImage 2.4 /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vImage.framework/Versions/A/vImage 0x96571000 - 0x96622fff ATS /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ATS.framework/Versions/A/ATS 0x969bf000 - 0x969d5fff libJapaneseConverter.dylib /System/Library/CoreServices/Encodings/libJapaneseConverter.dylib 0x969d7000 - 0x969f7fff libKoreanConverter.dylib /System/Library/CoreServices/Encodings/libKoreanConverter.dylib 0x96a1b000 - 0x96a2efff libTraditionalChineseConverter.dylib /System/Library/CoreServices/Encodings/libTraditionalChineseConverter.dylib 0x972f2000 - 0x97311fff com.apple.Accelerate.vecLib 3.2.2 (vecLib 3.2.2) /System/Library/Frameworks/Accelerate.framework/Versions/A/Frameworks/vecLib.framework/Versions/A/vecLib 0x9740a000 - 0x9744cfff com.apple.ImageIO.framework 1.5.0 /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/ImageIO 0x97465000 - 0x97469fff libGIF.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libGIF.dylib 0x9746c000 - 0x974dbfff libJP2.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libJP2.dylib 0x974f3000 - 0x97511fff libJPEG.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libJPEG.dylib 0x976a4000 - 0x976bdfff libPng.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libPng.dylib 0x976c3000 - 0x976c6fff libRadiance.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libRadiance.dylib 0x976c9000 - 0x97728fff libRaw.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libRaw.dylib 0x9772e000 - 0x9776bfff libTIFF.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/ImageIO.framework/Versions/A/Resources/libTIFF.dylib 0x97849000 - 0x97899fff libGLImage.dylib /System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries/libGLImage.dylib 0x979bf000 - 0x97a82fff com.apple.audio.toolbox.AudioToolbox 1.4.3 /System/Library/Frameworks/AudioToolbox.framework/Versions/A/AudioToolbox 0x97ad8000 - 0x97cabfff com.apple.QuartzCore 1.4.9 /System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore 0x9b7bf000 - 0x9b7f5fff com.apple.Syndication 1.0.6 (54) /System/Library/PrivateFrameworks/Syndication.framework/Versions/A/Syndication 0x9b815000 - 0x9b827fff com.apple.SyndicationUI 1.0.6 (54) /System/Library/PrivateFrameworks/SyndicationUI.framework/Versions/A/SyndicationUI 0x9ea47000 - 0x9ea55fff libz.1.dylib /usr/lib/libz.1.dylib 0x9ea87000 - 0x9ea92fff libgcc_s.1.dylib /usr/lib/libgcc_s.1.dylib 0x9ea98000 - 0x9eb09fff libstdc++.6.dylib /usr/lib/libstdc++.6.dylib 0x9f62c000 - 0x9f63bfff libCGATS.A.dylib /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreGraphics.framework/Versions/A/Resources/libCGATS.A.dylib 0x9f643000 - 0x9f67bfff com.apple.vmutils 4.0.0 (85) /System/Library/PrivateFrameworks/vmutils.framework/Versions/A/vmutils 0x9f690000 - 0x9f6b9fff libxslt.1.dylib /usr/lib/libxslt.1.dylib 0x9f6c1000 - 0x9f6cefff com.apple.agl 2.5.6 (AGL-2.5.6) /System/Library/Frameworks/AGL.framework/Versions/A/AGL 0x9f6e6000 - 0x9f6f5fff com.apple.print.framework.Print 5.2 (192.4) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/Print.framework/Versions/A/Print 0x9f701000 - 0x9f72efff com.apple.openscripting 1.2.5 (???) /System/Library/Frameworks/Carbon.framework/Versions/A/Frameworks/OpenScripting.framework/Versions/A/OpenScripting 0x9f748000 - 0x9f785fff libsqlite3.0.dylib /usr/lib/libsqlite3.0.dylib 0x9f78d000 - 0x9f87bfff libiconv.2.dylib /usr/lib/libiconv.2.dylib 0x9f87e000 - 0x9f8f9fff com.apple.audio.CoreAudio 3.0.4 /System/Library/Frameworks/CoreAudio.framework/Versions/A/CoreAudio 0x9f936000 - 0x9f93ffff com.apple.DiskArbitration 2.1 /System/Library/Frameworks/DiskArbitration.framework/Versions/A/DiskArbitration 0x9f946000 - 0x9fd00fff com.apple.CoreGraphics 1.258.38 (???) /System/Library/Frameworks/ApplicationServices.framework/Versions/A/Frameworks/CoreGraphics.framework/Versions/A/CoreGraphics 0x9fd8d000 - 0x9fe8ffff libicucore.A.dylib /usr/lib/libicucore.A.dylib 0x9fee9000 - 0x9ffc7fff libxml2.2.dylib /usr/lib/libxml2.2.dylib 0x9ffe7000 - 0x9fff9fff libauto.dylib /usr/lib/libauto.dylib Model: PowerBook5,6, BootROM 4.9.1f3, 1 processors, PowerPC G4 (1.2), 1.5 GHz, 1.5 GB Graphics: ATI Mobility Radeon 9700, ATY,RV360M11, AGP, 64 MB Memory Module: SODIMM0/J25LOWER, 1 GB, DDR SDRAM, PC2700U-25330 Memory Module: SODIMM1/J25UPPER, 512 MB, DDR SDRAM, PC2700U-25330 AirPort: AirPort Extreme, 405.1 (3.90.34.0.p18) Modem: Jump, , V.92, Version 1.0, Bluetooth: Version 1.7.8f2, 2 service, 0 devices, 1 incoming serial ports Network Service: AirPort, AirPort, en1 PCI Card: TXN,PCIXXXX-00, cardbus, PC Card Parallel ATA Device: MATSHITADVD-R UJ-845E, Parallel ATA Device: Hitachi HTS541080G9AT00, 74.53 GB USB Device: Bluetooth HCI, , Up to 12 Mb/sec, 500 mA USB Device: Apple Internal Keyboard/Trackpad, Apple Computer, Up to 12 Mb/sec, 500 mA USB Device: SoundSticks, harman/kardon, Up to 12 Mb/sec, 500 mA USB Device: Hub in Apple Pro Keyboard, Mitsumi Electric, Up to 12 Mb/sec, 500 mA USB Device: Kensington USB Wheel Mouse, Kensington, Up to 1.5 Mb/sec, 100 mA USB Device: Apple Pro Keyboard, Mitsumi Electric, Up to 12 Mb/sec, 250 mA
Attachments
Use the renderer's CachedImage (2.69 KB, patch)
2007-02-28 15:44 PST, Beth Dakin
beidson: review+
Matt Lilek
Comment 1 2007-02-27 20:06:46 PST
Confirmed, I get this assertion failure: ASSERTION FAILED: imageResource (/Users/matt/Code/WebKit/WebCore/platform/mac/PasteboardMac.mm:293 writeImage)
Beth Dakin
Comment 2 2007-02-28 15:44:18 PST
Created attachment 13430 [details] Use the renderer's CachedImage Small patch!
Beth Dakin
Comment 3 2007-02-28 15:48:37 PST
Brady Eidson
Comment 4 2007-02-28 15:54:04 PST
Comment on attachment 13430 [details] Use the renderer's CachedImage Okay, this sounds good
Beth Dakin
Comment 5 2007-02-28 15:59:59 PST
Note You need to log in before you can comment on or make changes to this bug.